updated yaml to master branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,13 +2,13 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
     paths-ignore:
       - "**/*.md"
       - ".gitignore"
       - "infra/**"
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
     paths-ignore:
       - "**/*.md"
       - ".gitignore"
