--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,8 +41,11 @@ packages = ["api"]
 [tool.ruff]
 line-length = 100
 target-version = "py312"
+
+[tool.ruff.lint]
 select = ["E","F","I","UP","B","SIM","W","RUF"]
-ignore = ["E501"]  # we'll manage line length pragmatically
+ignore = ["E501"]
+
 
 [tool.mypy]
 python_version = "3.12"
