--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
           pip install -e ".[dev]"
 
       - name: Lint (ruff)
-        run: ruff check .
+        run: ruff check api tests scripts --force-exclude
 
       - name: Type-check (mypy)
         run: mypy api
